<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">FilmApp</string>
    <string name="rating_prompt">Select rating</string>
    <string-array name="ratings_array">
        <item android:textColor="@color/text_primary">1</item>
        <item android:textColor="@color/text_primary">2</item>
        <item android:textColor="@color/text_primary">3</item>
        <item android:textColor="@color/text_primary">4</item>
        <item android:textColor="@color/text_primary">5 </item>
        <item android:textColor="@color/text_primary">6</item>
        <item android:textColor="@color/text_primary">7</item>
        <item android:textColor="@color/text_primary">8</item>
        <item android:textColor="@color/text_primary">9</item>
        <item android:textColor="@color/text_primary">10</item>
    </string-array>
    <string name="user_avatar">User avatar</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="cancel">Cancel</string>
    <string name="submit_review">Submit</string>
    <string name="filter_reviews">Filter reviews</string>
    <string name="no_reviews_yet">No reviews yet</string>
    <string name="reviews">Reviews</string>
    <string name="error_loading_reviews">Error loading reviews</string>
</resources>